fixed visible overflow to be hidden

--- a/src/components/MovieList.module.scss
+++ b/src/components/MovieList.module.scss
@@ -15,7 +15,7 @@
     outline: none;
 
     &__parentRow {
-      overflow: auto;
+      overflow: hidden;
       width: 100%;
 
       &__row {
